# input-overlay

./: .gitignore  README.md  index.html  style.css
.github/workflows/: _build.yml  nightly.yml  release.yml
gimmick/: input-history.html  sync.html  ws-debug.html
scripts/: consts.js  main.js
scripts/services/: configurator.js  gamepadManager.js  keyLayoutParser.js  layoutParser.js  overlay.js  overlayVisualiser.js  urlManager.js  webSocketManager.js
ws-server/: input-overlay-ws.py  requirements.txt
ws-server-legacy/services/: settings.py
ws-server-legacy/services/linux/: input_keys.py
ws-server/services/: consts.py  dialogs.py  settings.py  tray.py  utils.py
ws-server/services/linux/: input_keys.py  input_mouse_move.py
ws-server/services/windows/: input_rawinputbuffer.py
ws-server/src/: index.html  main.js  styles.css  update.html  update.js
ws-server/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
ws-server/src-tauri/capabilities/: default.json
ws-server/src-tauri/src/: lib.rs  main.rs  ws_server.rs
ws-server/src-tauri/src/services/: analog.rs  config.rs  consts.rs  http_server.rs  mod.rs
ws-server/src-tauri/src/services/linux/: autostart.rs  evdev_input.rs  mod.rs  updater.rs
ws-server/src-tauri/src/services/windows/: autostart.rs  mod.rs  raw_input.rs  updater.rs
ws-server/src/lib/: XP-ZUNE.css
